[gd_scene load_steps=5 format=3 uid="uid://mqcaccn11ief"]

[ext_resource type="PackedScene" uid="uid://ivmhtvn15ll1" path="res://resources/UI/on_screen_equipment_slot.tscn" id="1_8olpk"]
[ext_resource type="Script" path="res://resources/UI/on_screen_ui.gd" id="1_cqljj"]
[ext_resource type="StyleBox" uid="uid://da27g4e1qgsos" path="res://resources/UI/health_bar_background.tres" id="2_6q5tu"]
[ext_resource type="StyleBox" uid="uid://23ibews3ucw1" path="res://resources/UI/health_bar_fill.tres" id="3_ejgab"]

[node name="OnScreenUi" type="CanvasLayer"]
script = ExtResource("1_cqljj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PlayerHealthBar" type="ProgressBar" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 16)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = ExtResource("2_6q5tu")
theme_override_styles/fill = ExtResource("3_ejgab")
step = 1.0
value = 100.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="LeftHandSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_8olpk")]
layout_mode = 2
slot_name = "L HAND"

[node name="RightHandSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_8olpk")]
layout_mode = 2
slot_name = "R HAND"

[node name="PotionSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_8olpk")]
visible = false
layout_mode = 2
slot_name = "POTION"

[node name="JutsuSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_8olpk")]
visible = false
layout_mode = 2
slot_name = "JUTSU"
